# seti_p2

lab1/: main.cpp  mcast
lab2/: client  client.cpp  server  server.cpp  test.txt
lab3/: CMakeLists.txt  config.json
lab3/single/: LocationFinderSimple  main.cpp
lab4 snake/2try/snake_network/: CMakeLists.txt
lab4 snake/2try/snake_network/proto/: snakes.proto
lab4 snake/2try/snake_network/src/: game.cpp  game.h  main.cpp  net.cpp  net.h
lab5/: socks5proxy  socks5proxy.cpp
